--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,11 @@
     <string name="action_settings">Settings</string>
     <string name="button">Button</string>
     <string name="textview">TextView</string>
+    <string name="please_choose_your_weapon">Please Choose Your Weapon</string>
+    <string name="welcome_to_rock_paper_scissors">Welcome to Rock-Paper-Scissors</string>
+    <string name="rock">Rock</string>
+    <string name="paper">Paper</string>
+    <string name="scissors">Scissors</string>
+    <string name="Tie">It\'s a Tie!</string>
 
 </resources>
